tests/errors/operators/builtin_type_violations.sad
# Attempt to pass a non-primitive List value to type casters
Integer([1, 2])
